--- a/nonamukja_/pubspec.yaml
+++ b/nonamukja_/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.6
+  http: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -55,6 +56,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - ./test_image.webp
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
