--- a/nonamukja_/pubspec.yaml
+++ b/nonamukja_/pubspec.yaml
@@ -31,10 +31,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  json_annotation: ^3.1.0
   provider: ^6.0.0
   shared_preferences: ^2.0.6
   http: ^0.13.5
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  json_serializable: ^3.0.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
