--- a/nonamukja_/pubspec.yaml
+++ b/nonamukja_/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  dio: ^4.0.6
   json_annotation: ^3.1.0
   provider: ^6.0.0
   shared_preferences: ^2.0.6
