--- a/nonamukja_/pubspec.yaml
+++ b/nonamukja_/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  url_launcher: ^6.0.18
   dio: ^4.0.6
-  json_annotation: ^3.1.0
   provider: ^6.0.0
   shared_preferences: ^2.0.6
   http: ^0.13.5
@@ -48,7 +48,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.0.0
-  json_serializable: ^3.0.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -83,18 +82,10 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+     - family: OneMobilePOP
+       fonts:
+         - asset: assets/font/ONE-MOBILE-POP-OTF.otf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
